# industrial_cpp_vk

HW1/projects/: showstats.cpp
hw1/: CMakeLists.txt  Makefile  README.md  catch2.cpp  checker.sh  showstats.cpp  tests.cpp  ustring.hpp
hw1/include/: ustring.hpp
hw1/test-int/: checker.sh
hw1/testsuite/: catch2.cpp
